--- a/app/aboutUs/content/view.html
+++ b/app/aboutUs/content/view.html
@@ -1,9 +1,4 @@
-<h1 class="inner_h2_main">
-  <label>About</label>
-</h1>
-<div class="col-md-12 col-sm-12 col-xs-12 pading_0 margin-bottom-20 ">
-
-</div>
+<section-heading>About</section-heading>
 <p class="abt_p"></p>
 <p>Our mission is to increase awareness and provide support and guidance for those seeking substance abuse treatment. We have a “client-centered” philosophy and strive to provide resources and options to suit everyone’s unique situation and need.
 </p>
