--- a/app/header/view.html
+++ b/app/header/view.html
@@ -62,4 +62,4 @@
     <!--/.nav-collapse -->
   </div>
 </div>
-<div ng-show="$ctrl.sliderShow" ng-bind-html="$ctrl.html"></div>
+<!-- <div ng-show="$ctrl.sliderShow" ng-bind-html="$ctrl.html"></div> -->
