--- a/app/myProfile/myTreatmentCenters/view.html
+++ b/app/myProfile/myTreatmentCenters/view.html
@@ -1,11 +1,6 @@
 <div class="col-md-8 col-sm-8 col-xs-12 col-lg-9">
-  <div class="heading_main_div">
-    <h2>
-      <label>
-        My Treatment Centers
-      </label>
-    </h2>
-  </div>
+  <section-heading>My Treatment Centers</section-heading>
+  <!-- Content Starts -->
   <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
     <!-- Add treatment center button -->
     <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 pull-right ">
@@ -17,13 +12,10 @@
         </div>
       </a>
     </div>
-
     <!-- Center listings in a table -->
     <center-table centers="$ctrl.currentCenters" on-activate="$ctrl.onActivate(id)" on-delete="$ctrl.open(id)"></center-table>
-
     <!-- Pagination -->
     <pagination page-size="$ctrl.pageSize" total-page="$ctrl.totalPage" current-page="$ctrl.currentPage" on-update="$ctrl.onPageUpdate(page)"></pagination>
 
-    <!-- Ad -->
   </div>
 </div>
