--- a/app/myProfile/sponsorAds/edit/view.html
+++ b/app/myProfile/sponsorAds/edit/view.html
@@ -1,9 +1,5 @@
 <div class="col-md-8 col-sm-8 col-xs-12 col-lg-9">
-  <div class="heading_main_div">
-    <h2>
-      <label>Edit Sponsor Ad </label>
-    </h2>
-  </div>
+  <section-heading>Edit Sponsor Ad</section-heading>
   <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
     <div class="row">
       <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
@@ -21,7 +17,7 @@
           <p> You are free to add your own image and text and place them on any sponsored page on Addiction Network. This allows you to choose pages that related highly to the services you provide, as well as zero in on specific locations in the United States.</p>
         </div>
         <form name="sponsorAdsEdit" class="form-horizontal">
-          <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0">
+          <div class="adn-row">
             <div class="col-md-4 col-sm-4 col-xs-12">
               <label for="tname"> Title: </label>
             </div>
@@ -30,7 +26,7 @@
               <span ng-show="sponsorAdsEdit.title.$error.required" class="help-block">Title can't be blank.</span>
             </div>
           </div>
-          <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0">
+          <div class="adn-row">
             <div class="col-md-4 col-sm-4 col-xs-12">
               <label for="tname"> Name: </label>
             </div>
@@ -39,7 +35,7 @@
               <span ng-show="sponsorAdsEdit.name.$error.required" class="help-block">Name can't be blank.</span>
             </div>
           </div>
-          <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+          <div class="adn-row">
             <div class="col-md-4 col-sm-4 col-xs-12">
               <label for="img_upload"> Upload Image:</label>
             </div>
@@ -52,7 +48,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+          <div class="adn-row">
             <div class="col-md-4 col-sm-4 col-xs-12">
               <label for="description"> </label>
             </div>
@@ -62,7 +58,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+          <div class="adn-row">
             <div class="col-md-4 col-sm-4 col-xs-12">
               <label for="description"> Description: </label>
             </div>
@@ -71,7 +67,7 @@
               <span ng-show="sponsorAdsEdit.sponsor_ad_description.$error.required" class="help-block">Description can't be blank.</span>
             </div>
           </div>
-          <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+          <div class="adn-row">
             <div class="col-md-4 col-sm-4 col-xs-12">
               <label for="web_link"> Website URL: </label>
             </div>
@@ -82,7 +78,7 @@
 
             </div>
           </div>
-          <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0">
+          <div class="adn-row">
             <div class="col-md-4 col-sm-4 col-xs-12">
               <label for="tname"> Sponsor Ads: </label>
             </div>
@@ -91,7 +87,7 @@
 
             </div>
           </div>
-          <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0 ">
+          <div class="adn-row ">
             <div class="col-md-4 col-sm-4 col-xs-12 ">
               <label for="web_link "> Payment Amount: </label>
             </div>
