--- a/app/addListing/view.html
+++ b/app/addListing/view.html
@@ -11,7 +11,7 @@
             <form name="addlistForm" enctype="multipart/form-data">
               <input name="customertype" value="owner" type="hidden">
               <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">First Name:
                     </label>
@@ -21,7 +21,7 @@
                     <p ng-show="addlistForm.user_first_name.$error.required" class="help-block">Required</p>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">Last Name:
                     </label>
@@ -31,7 +31,7 @@
                     <p ng-show="addlistForm.user_last_name.$error.required" class="help-block">Required</p>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">Company
                     </label>
@@ -41,7 +41,7 @@
                     <p ng-show="addlistForm.user_company.$error.required" class="help-block">Required</p>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">Phone
                     </label>
@@ -52,10 +52,10 @@
                   </div>
                 </div>
 
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <h3 class="sub_heading_under_sign_up">User Information :</h3>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">Username
                     </label>
@@ -65,7 +65,7 @@
                     <p ng-show="addlistForm.username.$error.required" class="help-block">Required</p>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">Email
                     </label>
@@ -75,7 +75,7 @@
                     <p ng-show="addlistForm.email.$invalid" class="help-block">Required and please enter valid email</p>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">Password
                     </label>
@@ -87,7 +87,7 @@
 
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">Password Confirmation
                     </label>
@@ -99,10 +99,10 @@
                   </div>
                 </div>
 
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <h3 class="sub_heading_under_sign_up">Treatment Center Info :</h3>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">Select Category:
                     </label>
@@ -113,7 +113,7 @@
                   </div>
                 </div>
 
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">Treatment Center Name
                     </label>
@@ -123,7 +123,7 @@
                     <p ng-show="addlistForm.center_name.$invalid" class="help-block">Required</p>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">Website </label>
                   </div>
@@ -132,7 +132,7 @@
                     <span ng-show="addlistForm.center_web_link.$invalid" class="help-block ng-hide">Invalid Format(Correct format: www.google.com)</span>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">Intake Email
                     </label>
@@ -142,7 +142,7 @@
                     <p ng-show="addlistForm.intakeemail.$invalid" class="help-block">Required and please enter valid email</p>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">Intake Phone</label>
                   </div>
@@ -151,7 +151,7 @@
                     <p ng-show="addlistForm.intakephone.$invalid" class="help-block">Required and phone number must be 10 digits long</p>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">Description</label>
                   </div>
@@ -160,7 +160,7 @@
                     <p ng-show="addlistForm.description.$error.required">Required</p>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="web_link">Logo:
                     </label>
@@ -169,7 +169,7 @@
                     <input name="listing_image[]" id="listing_image" file-model="$ctrl.listing_image" class="span2 text_file multi center_image" type="file" accept="image/*">
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">Street Address
                     </label>
@@ -179,7 +179,7 @@
                     <p ng-show="addlistForm.address_line_1.$invalid">Required</p>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">State</label>
                   </div>
@@ -191,7 +191,7 @@
                     <p ng-show="addlistForm.state.$invalid">Required</p>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">City
                     </label>
@@ -204,7 +204,7 @@
                     <p ng-show="addlistForm.city.$invalid">Required</p>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">Country
                     </label>
@@ -213,7 +213,7 @@
                     <input placeholder="Country" id="country" name="country" class="form-control required" type="text" ng-model="$ctrl.country">
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">Zip
                     </label>
@@ -223,10 +223,10 @@
                     <p ng-show="addlistForm.pincode.$invalid" class="help-block">Zip code must be 5 digits</p>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <h3 class="sub_heading_under_sign_up">Treatment Center Details:</h3>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">
                       Overview of Program
@@ -237,7 +237,7 @@
                     <p ng-show="addlistForm.content_1.$error.required" class="help-block">Required</p>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">
                       Treatment Approach
@@ -248,7 +248,7 @@
                     <p ng-show="addlistForm.content_2.$error.required" class="help-block">Required</p>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="cpwd">
                       Unique Selling Points
@@ -259,7 +259,7 @@
                     <p ng-show="addlistForm.content_3.$error.required" class="help-block">Required</p>
                   </div>
                 </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+                <div class="adn-row">
                   <div class="col-md-4 col-sm-4 col-xs-12">
                     <label for="web_link">Upload Gallery Images:
                     </label>
