--- a/app/featuredTreatmentCenter/view.html
+++ b/app/featuredTreatmentCenter/view.html
@@ -14,11 +14,9 @@
             <li>Contact info: While free listings are great for branding purposes, they do not display your phone number, website, or email address on the listing.&nbsp; Featured listings show all contact info allowing readers to call or email you directly from your listing page.</li>
             <li>Direct link back to your website: Featured listings all have a one way do follow link back to your website.&nbsp; This allows potential clients to click directly through to your website for more information as well as providing a link back to your site from a highly related authority site.&nbsp; This is highly beneficial for SEO purposes.</li>
           </ul>
-          &nbsp;
-          <p></p>
 
           <div class="row">
-            <a href="#/my-treatment-centers">
+            <a ui-sref="myProfile.myTreatmentCenters">
               <input type="button" value="Back to Treatment Center" class="btn btn-primary modal_btn">
             </a>
           </div>
