--- a/app/myProfile/accountSettings/view.html
+++ b/app/myProfile/accountSettings/view.html
@@ -1,16 +1,8 @@
 <div class="col-md-8 col-sm-8 col-xs-12 col-lg-9">
-
-  <!-- Heading Start -->
-  <div class="heading_main_div">
-    <h2>
-      <label> Account Settings </label>
-    </h2>
-  </div>
-  <!-- Heading End -->
-
+  <section-heading>Account Settings</section-heading>
   <!-- Content Start -->
   <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
-    <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 pull-right pading_0">
+    <div class="clearfix pull-right">
       <div class="col-md-12 col-sm-12 col-xs-12">
         <a href="javascript:history.go(-1);">
           <span class="modal_btn btn btn-primary margin_bottom_15_add pull-right text-right">
@@ -20,10 +12,10 @@
       </div>
     </div>
     <form ng-submit="$ctrl.submit()" class="form-horizontal" enctype="multipart/form-data" novalidate="novalidate" __bizdiag="-1747746453" __biza="WJ__">
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <!-- First Name -->
         <div class="col-md-4 col-sm-4 col-xs-12">
-          <label for="userf">First Name: </label>
+          <label for="firstname">First Name:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12">
           <input ng-model="$ctrl.first_name" type="text" name="first_name" class="form-control required" placeholder="First Name" />
@@ -31,9 +23,9 @@
       </div>
 
       <!-- Last Name -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
-          <label for="userl"> Last Name: </label>
+          <label for="lastname">Last Name:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12">
           <input ng-model="$ctrl.last_name" type="text" name="last_name" class="form-control required" placeholder="Last Name" />
@@ -41,9 +33,9 @@
       </div>
 
       <!-- Email -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
-          <label for="email"> Email: </label>
+          <label for="email">Email:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12">
           <input ng-model="$ctrl.email" type="text" name="email" readonly="" class="form-control" id="email" placeholder="Email" />
@@ -51,9 +43,9 @@
       </div>
 
       <!-- About me -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
-          <label for="about"> About Me: </label>
+          <label for="about">About Me:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12">
           <textarea ng-model="$ctrl.about_me" name="about_me" type="text" rows="3" cols="100%" class="form-control required" placeholder=""> </textarea>
@@ -61,9 +53,9 @@
       </div>
 
       <!-- Country -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
-          <label for="country"> Country</label>
+          <label for="country">Country</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12">
           <input ng-model="$ctrl.country" type="text" name="country" class="form-control required" value="" />
@@ -71,7 +63,7 @@
       </div>
 
       <!-- State -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="state"> State </label>
         </div>
@@ -81,7 +73,7 @@
       </div>
 
       <!-- Zipcode -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="zip"> Zipcode: </label>
         </div>
@@ -91,7 +83,7 @@
       </div>
 
       <!-- City -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="city"> City: </label>
         </div>
@@ -101,7 +93,7 @@
       </div>
 
       <!-- Address -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="addr"> Address: </label>
         </div>
@@ -111,7 +103,7 @@
       </div>
 
       <!-- Phone -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="phone"> Phone: </label>
         </div>
@@ -121,7 +113,7 @@
       </div>
 
       <!-- Upload Image -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="img_upload"> Upload Image: </label>
         </div>
@@ -136,7 +128,7 @@
       </div>
 
       <!-- Submit -->
-      <div class="col-md-8 col-md-offset-4 col-md-offset-4 col-sm-12 col-xs-12 col-lg-8 main_wrap_form_inner_sub new_class_for_label text-left">
+      <div class="col-md-8 col-md-offset-4 col-md-offset-4 col-sm-12 col-xs-12 col-lg-8 margin-bottom-10 new_class_for_label text-left">
         <input type="submit" name="submit" class="btn btn-primary modal_btn pull-right" value="Submit" />
       </div>
     </form>
