--- a/app/myProfile/addTreatmentCenter/view.html
+++ b/app/myProfile/addTreatmentCenter/view.html
@@ -1,15 +1,8 @@
 <div class="col-md-8 col-sm-8 col-xs-12 col-lg-9">
-  <!-- Heading Start -->
-  <div class="heading_main_div">
-    <h2>
-      <label>Add Treatment Center</label>
-    </h2>
-  </div>
-  <!-- Heading End -->
-
+  <section-heading>Add Treatment Center</section-heading>
   <!-- Content Start -->
   <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
-    <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 pull-right pading_0">
+    <div class="margin-bottom-10 pull-right">
       <div class="col-md-12 col-sm-12 col-xs-12">
         <a href="javascript:history.go(-1);">
           <span class="modal_btn btn btn-primary margin_bottom_15_add pull-right  text-right">
@@ -21,7 +14,7 @@
     <form ng-submit="$ctrl.submit()" id="treatmentCenter" class="form-horizontal" enctype="multipart/form-data" novalidate="novalidate" __bizdiag="1043787928" __biza="WJ__">
 
       <!-- Category -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="category">Select Category:</label>
         </div>
@@ -32,7 +25,7 @@
       </div>
 
       <!-- Center Name -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="tname">Center Name:</label>
         </div>
@@ -42,7 +35,7 @@
       </div>
 
       <!-- Center Website Link -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="web_link">Website Link:</label>
         </div>
@@ -52,7 +45,7 @@
       </div>
 
       <!-- Street Address -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="addr">Street Address:</label>
         </div>
@@ -63,7 +56,7 @@
       </div>
 
       <!-- City -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="city">City:</label>
         </div>
@@ -73,7 +66,7 @@
       </div>
 
       <!-- Select State -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="state">Select State:</label>
         </div>
@@ -83,7 +76,7 @@
       </div>
 
       <!-- Zipcode -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="zip">Zipcode:</label>
         </div>
@@ -93,7 +86,7 @@
       </div>
 
       <!-- Phone -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="phone">Phone:</label>
         </div>
@@ -103,7 +96,7 @@
       </div>
 
       <!-- Email -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="phone">Email:</label>
         </div>
@@ -113,7 +106,7 @@
       </div>
 
       <!-- Email -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="img_upload">Logo:</label>
         </div>
@@ -129,7 +122,7 @@
       </div>
 
       <!-- Description content_1 -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="description">Description:</label>
         </div>
@@ -139,7 +132,7 @@
       </div>
 
       <!-- About  Facility content_2 -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="about">About Facility:</label>
         </div>
@@ -149,7 +142,7 @@
       </div>
 
       <!-- Treatment Approach content_3 -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="center_approach">Treatment Approach:</label>
         </div>
@@ -159,7 +152,7 @@
       </div>
 
       <!-- Unique Selling Points content_4 -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="center_philosophy">Unique Selling Points:</label>
         </div>
@@ -169,7 +162,7 @@
       </div>
 
       <!-- Upload Gallery Images image_data -->
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <label for="web_link">Upload Gallery Images:
           </label>
@@ -184,7 +177,7 @@
       <input type="hidden" name="slug" value="" />
 
       <!-- Submit -->
-      <div class="text-left col-md-8 col-sm-12 col-xs-8 col-lg-8 col-md-offset-4 col-lg-offset-4 col-sm-offset-4 main_wrap_form_inner_sub">
+      <div class="text-left col-md-8 col-sm-12 col-xs-8 col-lg-8 col-md-offset-4 col-lg-offset-4 col-sm-offset-4 clearfix">
         <input class="btn btn-primary modal_btn pull-right btn_size" id="submit_profile" type="submit" value="Submit" />
         <input type="hidden" value="" name="current_pay" id="current_pay" />
       </div>
