--- a/app/myProfile/paymentDetails/add/view.html
+++ b/app/myProfile/paymentDetails/add/view.html
@@ -1,10 +1,5 @@
 <div class="col-md-8 col-sm-8 col-xs-12 col-lg-9">
-  <div class="heading_main_div">
-    <h2>
-      <label>Add Payment Details </label>
-    </h2>
-
-  </div>
+  <section-heading>Add Payment Details</section-heading>
   <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
 
     <div class="row">
@@ -24,7 +19,7 @@
         <div class="row">
           <form name="paymentDetailsForm">
             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-              <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+              <div class="adn-row">
                 <div class="col-md-4 col-sm-4 col-xs-12">
                   <label for="name">Card Number: </label>
                 </div>
@@ -33,7 +28,7 @@
                   <span ng-show="paymentDetailsForm.card.$invalid" class="help-block">Invalid Card number</span>
                 </div>
               </div>
-              <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+              <div class="adn-row">
                 <div class="col-md-4 col-sm-4 col-xs-12">
                   <label for="name">Expiry Year: </label>
                 </div>
@@ -50,7 +45,7 @@
                   <span class="help-block">{{$ctrl.yearError}}</span>
                 </div>
               </div>
-              <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+              <div class="adn-row">
                 <div class="col-md-4 col-sm-4 col-xs-12">
                   <label for="name">Expiry Month: </label>
                 </div>
@@ -73,7 +68,7 @@
                   <span class="help-block">{{$ctrl.monthError}}</span>
                 </div>
               </div>
-              <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+              <div class="adn-row">
                 <div class="col-md-4 col-sm-4 col-xs-12">
                   <label for="cpwd">CVV Code</label>
                 </div>
