--- a/app/myProfile/profileMain/view.html
+++ b/app/myProfile/profileMain/view.html
@@ -1,98 +1,69 @@
 <div class="col-md-8 col-sm-8 col-xs-12 col-lg-9">
-  <div class="heading_main_div">
-    <h2>
-      <label>
-        My Profile
-      </label>
-    </h2>
-  </div>
+  <section-heading>My Profile</section-heading>
   <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
-    <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 pull-right ">
+    <div class="adn-row pull-right ">
       <a ui-sref="myProfile.addTreatmentCenter">
-        <div class="col-md-12 col-xs-12 col-sm-12 padding_0">
-          <span class="pull-right modal_btn btn btn-primary margin_bottom_15_add  text-right">
-            Add Treatment Center
-          </span>
-        </div>
+        <span class="pull-right modal_btn btn btn-primary text-right">
+          Add Treatment Center
+        </span>
       </a>
     </div>
     <form class="form-horizontal" __bizdiag="0" __biza="WJ__">
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_profile">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-6">
-          <label for="userf">First Name:
-          </label>
+          <label for="userf">First Name:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-6">
-          <span class="profile_label2">
-            {{ $ctrl.profile.first_name }}
-          </span>
+          <p>{{ $ctrl.profile.first_name }}</p>
         </div>
       </div>
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_profile">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-6">
-          <label for="userf">Last Name:
-          </label>
+          <label for="userf">Last Name:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-6">
-          <span class="profile_label2">
-            {{ $ctrl.profile.last_name }}
-          </span>
+          <p>{{ $ctrl.profile.last_name }}</p>
         </div>
       </div>
 
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_profile">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-6">
-          <label for="userf">Email:
-          </label>
+          <label for="userf">Email:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-6">
-          <span class="profile_label2">
-            {{ $ctrl.profile.email }}
-          </span>
+          <p>{{ $ctrl.profile.email }}</p>
         </div>
       </div>
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_profile">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-6">
-          <label for="userf">About Me:
-          </label>
+          <label for="userf">About Me:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-6">
-          <span class="profile_label2">
-            {{ $ctrl.profile.about_me }}
-          </span>
+          <p>{{ $ctrl.profile.about_me }}</p>
         </div>
       </div>
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_profile">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-6">
-          <label for="userf">Phone:
-          </label>
+          <label for="userf">Phone:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-6">
-          <span class="profile_label2">
-            {{ $ctrl.profile.phone }}
-          </span>
+          <p>{{ $ctrl.profile.phone }}</p>
         </div>
       </div>
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_profile">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-6">
-          <label for="userf">Address:
-          </label>
+          <label for="userf">Address:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-6">
-          <span class="profile_label2">
-            {{ $ctrl.profile.address }}
-          </span>
+          <p>{{ $ctrl.profile.address }}</p>
         </div>
       </div>
-      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_profile">
+      <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-6">
-          <label for="userf">Zipcode:
-          </label>
+          <label for="userf">Zipcode:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-6">
-          <span class="profile_label2">
-            {{ $ctrl.profile.zipcode }}
-          </span>
+          <p>{{ $ctrl.profile.zipcode }}</p>
         </div>
       </div>
     </form>
