--- a/app/myProfile/sponsorAds/add/view.html
+++ b/app/myProfile/sponsorAds/add/view.html
@@ -1,9 +1,5 @@
 <div class="col-md-8 col-sm-8 col-xs-12 col-lg-9">
-  <div class="heading_main_div">
-    <h2>
-      <label>Add Sponsor Ad </label>
-    </h2>
-  </div>
+  <section-heading>Add Sponsor Ad</section-heading>
   <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
     <div class="row">
       <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
@@ -20,7 +16,7 @@
         <form name="sponsorAdsForm" enctype="multipart/form-data">
           <input name="customertype" value="owner" type="hidden">
           <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+            <div class="adn-row">
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <label for="title">Title: </label>
               </div>
@@ -30,7 +26,7 @@
 
               </div>
             </div>
-            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+            <div class="adn-row">
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <label for="name">Name: </label>
               </div>
@@ -39,7 +35,7 @@
                 <span ng-show="sponsorAdsForm.name.$error.required" class="help-block">Name can't be blank.</span>
               </div>
             </div>
-            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+            <div class="adn-row">
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <label for="upload_img">Upload Image</label>
               </div>
@@ -49,7 +45,7 @@
                 <span ng-show="$ctrl.err_type">Please upload an image only. </span>
               </div>
             </div>
-            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+            <div class="adn-row">
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <label for="cpwd">Description</label>
               </div>
@@ -59,7 +55,7 @@
 
               </div>
             </div>
-            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+            <div class="adn-row">
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <label for="cpwd">Website </label>
               </div>
@@ -69,7 +65,7 @@
                 <span ng-show="sponsorAdsForm.website.$error.required" class="help-block">Website url can't be blank.</span>
               </div>
             </div>
-            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+            <div class="adn-row">
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <label for="cpwd">Sponsor Ads </label>
               </div>
@@ -77,7 +73,7 @@
                 <div ng-dropdown-multiselect="" options="$ctrl.sponsored_ad_select" checkboxes="true" selected-model="$ctrl.multiselectModelLayoutIds " extra-settings="$ctrl.multiselectModelSettings"></div>
               </div>
             </div>
-            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+            <div class="adn-row">
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <label for="text"> Payment Amount</label>
               </div>
