--- a/app/treatmentCenterDetail/inquiryFormCard/view.html
+++ b/app/treatmentCenterDetail/inquiryFormCard/view.html
@@ -5,7 +5,7 @@
     <!-- </div> -->
     <form ng-submit="$ctrl.submit()" novalidate="novalidate" __bizdiag="-483366306" __biza="WJ__">
       <!--　Name -->
-      <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 main_wrap_form_inner_sub">
+      <div class="adn-row">
         <div class="col-lg-4 col-ms-4 col-sm-8 col-xs-12">
           <label class="inquiry-form-label">Name:</label>
         </div>
@@ -15,7 +15,7 @@
       </div>
 
       <!--　Email -->
-      <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 main_wrap_form_inner_sub">
+      <div class="adn-row">
         <div class="col-lg-4 col-ms-4 col-sm-8 col-xs-12">
           <label class="inquiry-form-label">Email:</label>
         </div>
@@ -25,7 +25,7 @@
       </div>
 
       <!--　Phone -->
-      <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 main_wrap_form_inner_sub">
+      <div class="adn-row">
         <div class="col-lg-4 col-ms-4 col-sm-8 col-xs-12">
           <label class="inquiry-form-label">Phone:</label>
         </div>
@@ -35,7 +35,7 @@
       </div>
 
       <!--　Message -->
-      <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 main_wrap_form_inner_sub">
+      <div class="adn-row">
         <div class="col-lg-4 col-ms-4 col-sm-8 col-xs-12">
           <label class="inquiry-form-label">Message:</label>
         </div>
