--- a/app/myProfile/bannerAds/add/view.html
+++ b/app/myProfile/bannerAds/add/view.html
@@ -1,10 +1,5 @@
 <div class="col-md-8 col-sm-8 col-xs-12 col-lg-9">
-  <div class="heading_main_div">
-    <h2>
-      <label>Add Banner Ads </label>
-    </h2>
-
-  </div>
+  <section-heading>Add Banner Ads</section-heading>
   <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
 
     <div class="row">
@@ -25,7 +20,7 @@
           <form name="advertisementForm" enctype="multipart/form-data">
             <input name="customertype" value="owner" type="hidden">
             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-              <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+              <div class="adn-row">
                 <div class="col-md-4 col-sm-4 col-xs-12">
                   <label for="name">Name: </label>
                 </div>
@@ -33,7 +28,7 @@
                   <input placeholder="Name" name="name" id="name" class="form-control" type="text" ng-model="$ctrl.name">
                 </div>
               </div>
-              <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+              <div class="adn-row">
                 <div class="col-md-4 col-sm-4 col-xs-12">
                   <label for="position">Position: </label>
                 </div>
@@ -48,7 +43,7 @@
                 </div>
               </div>
 
-              <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+              <div class="adn-row">
                 <div class="col-md-4 col-sm-4 col-xs-12">
                   <label for="upload_img">Content</label>
                 </div>
@@ -59,7 +54,7 @@
                 </div>
               </div>
 
-              <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+              <div class="adn-row">
                 <div class="col-md-4 col-sm-4 col-xs-12">
                   <label for="cpwd">Center Web Link</label>
                 </div>
