--- a/app/myProfile/sponsorAds/add/view.html
+++ b/app/myProfile/sponsorAds/add/view.html
@@ -1,9 +1,5 @@
 <div class="col-md-8 col-sm-8 col-xs-12 col-lg-9">
-  <div class="heading_main_div">
-    <h2>
-      <label>Add Sponsor Ad </label>
-    </h2>
-  </div>
+  <section-heading>Add Sponsor Ad</section-heading>
   <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
     <div class="row">
       <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
@@ -20,7 +16,7 @@
         <form name="sponsorAdsForm" enctype="multipart/form-data">
           <input name="customertype" value="owner" type="hidden">
           <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+            <div class="adn-row">
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <label for="title">Title: </label>
               </div>
@@ -28,7 +24,7 @@
                 <input placeholder="Title" name="title" id="title" class="form-control required" type="text" ng-model="$ctrl.title">
               </div>
             </div>
-            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+            <div class="adn-row">
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <label for="name">Name: </label>
               </div>
@@ -36,7 +32,7 @@
                 <input placeholder="Name" name="name" id="name" class="form-control required" type="text" ng-model="$ctrl.name">
               </div>
             </div>
-            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+            <div class="adn-row">
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <label for="upload_img">Upload Image</label>
               </div>
@@ -46,7 +42,7 @@
                 <span ng-show="$ctrl.err_type">Please upload an image only. </span>
               </div>
             </div>
-            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+            <div class="adn-row">
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <label for="cpwd">Description</label>
               </div>
@@ -54,7 +50,7 @@
                 <textarea name="briefoverview" ng-model="$ctrl.description" class="form-control required" rows="2" cols="50" placeholder="Brief Overview"></textarea>
               </div>
             </div>
-            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+            <div class="adn-row">
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <label for="cpwd">Website </label>
               </div>
@@ -63,7 +59,7 @@
                 <span ng-show="sponsorAdsForm.website.$error.pattern" class="help-block">Invalid Format(Correct format: www.google.com)</span>
               </div>
             </div>
-            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+            <div class="adn-row">
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <label for="cpwd">Sponsor Ads </label>
               </div>
@@ -79,7 +75,7 @@
                 <div ng-dropdown-multiselect="" options="$ctrl.sponsored_ad_select" checkboxes="true" selected-model="$ctrl.multiselectModelLayoutIds " extra-settings="$ctrl.multiselectModelSettings"></div>
               </div>
             </div>
-            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+            <div class="adn-row">
               <div class="col-md-4 col-sm-4 col-xs-12">
                 <label for="text"> Payment Amount</label>
               </div>
