Fixed sponsored and banner ads validation

--- a/app/myProfile/bannerAds/add/view.html
+++ b/app/myProfile/bannerAds/add/view.html
@@ -30,7 +30,8 @@
                   <label for="name">Name: </label>
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12">
-                  <input placeholder="Name" name="name" id="name" class="form-control" type="text" ng-model="$ctrl.name">
+                  <input placeholder="Name" name="name" id="name" class="form-control" type="text" required="true" ng-model="$ctrl.name">
+                  <span ng-show="advertisementForm.name.$error.required" class="help-block">Name can't be blank.</span>
                 </div>
               </div>
               <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -64,14 +65,15 @@
                   <label for="cpwd">Center Web Link</label>
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12">
-                  <input name="center_web_link" ng-model="$ctrl.center_web_link" class="form-control" type="text" placeholder="Center Web Link" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+[a-z]{2,10}$/" />
+                  <input name="center_web_link" ng-model="$ctrl.center_web_link" class="form-control" type="text" required="true" placeholder="Center Web Link" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+([a-z]{2,10})?(?:[\.])+[a-z]{2,10}$/" />
                   <span ng-show="advertisementForm.center_web_link.$error.pattern" class="help-block">Invalid Format(Correct format: www.google.com)</span>
+                  <span ng-show="advertisementForm.center_web_link.$error.required" class="help-block">Weburl can't be blank.</span>
                 </div>
               </div>
 
 
               <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
-                <input class="btn btn-primary modal_btn btn_size pull-right" value="Submit" id="submit" type="button" ng-click="$ctrl.submit()" ng-disabled="advertisementForm.position.$invalid || advertisementForm.center_web_link.$invalid">
+                <input class="btn btn-primary modal_btn btn_size pull-right" value="Submit" id="submit" type="button" ng-click="$ctrl.submit()" ng-disabled="advertisementForm.position.$invalid || advertisementForm.center_web_link.$invalid ||  advertisementForm.name.$invalid">
                 <span ng-show="$ctrl.success_msg" class="pull-left" style="color:green;">Added</span>
               </div>
               <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub">
@@ -80,11 +82,8 @@
               </div>
             </div>
           </form>
-
         </div>
-
       </div>
-
     </div>
   </div>
 </div>
