--- a/app/myProfile/sponsorAds/add/view.html
+++ b/app/myProfile/sponsorAds/add/view.html
@@ -25,7 +25,9 @@
                 <label for="title">Title: </label>
               </div>
               <div class="col-md-8 col-sm-8 col-xs-12">
-                <input placeholder="Title" name="title" id="title" class="form-control required" type="text" ng-model="$ctrl.title">
+                <input placeholder="Title" name="title" id="title" class="form-control required" type="text" required ng-model="$ctrl.title">
+                <span ng-show="sponsorAdsForm.title.$error.required" class="help-block">Title can't be blank.</span>
+
               </div>
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -33,7 +35,8 @@
                 <label for="name">Name: </label>
               </div>
               <div class="col-md-8 col-sm-8 col-xs-12">
-                <input placeholder="Name" name="name" id="name" class="form-control required" type="text" ng-model="$ctrl.name">
+                <input placeholder="Name" name="name" id="name" class="form-control required" type="text" required ng-model="$ctrl.name">
+                <span ng-show="sponsorAdsForm.name.$error.required" class="help-block">Name can't be blank.</span>
               </div>
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -51,7 +54,9 @@
                 <label for="cpwd">Description</label>
               </div>
               <div class="col-md-8 col-sm-8 col-xs-12">
-                <textarea name="briefoverview" ng-model="$ctrl.description" class="form-control required" rows="2" cols="50" placeholder="Brief Overview"></textarea>
+                <textarea name="briefoverview" ng-model="$ctrl.description" class="form-control required" rows="2" cols="50" required placeholder="Brief Overview"></textarea>
+                <span ng-show="sponsorAdsForm.briefoverview.$error.required" class="help-block">Description can't be blank.</span>
+
               </div>
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -59,8 +64,9 @@
                 <label for="cpwd">Website </label>
               </div>
               <div class="col-md-8 col-sm-8 col-xs-12">
-                <input placeholder="website" name="website" class="form-control required" type="text" ng-model="$ctrl.website" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+[a-z]{2,10}$/">
+                <input placeholder="website" name="website" class="form-control required" type="text" ng-model="$ctrl.website" required ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+([a-z]{2,10})?(?:[\.])+[a-z]{2,10}$/">
                 <span ng-show="sponsorAdsForm.website.$error.pattern" class="help-block">Invalid Format(Correct format: www.google.com)</span>
+                <span ng-show="sponsorAdsForm.website.$error.required" class="help-block">Website url can't be blank.</span>
               </div>
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -68,14 +74,6 @@
                 <label for="cpwd">Sponsor Ads </label>
               </div>
               <div class="col-md-8 col-sm-8 col-xs-12">
-                <!-- <select name="$ctrl.sponsored_listing_layout_ids[]" ng-model="$ctrl.sponsored_listing_layout_ids" ng-dropdown-multiselect="" checkboxes="true" id="sposnor_ad_cat" class="required multiselect" multiple="multiple" title="Select (Price in $)">
-                  <optgroup>
-                    <option ng-repeat="normal in $ctrl.sponsored_ad_select_normal" value="{{normal.id}}">{{normal.name}}</option>
-                  </optgroup>
-                  <optgroup>
-                    <option ng-repeat="normal in $ctrl.sponsored_ad_select_state" value="{{normal.id}}">{{normal.name}}</option>
-                  </optgroup>
-                </select> -->
                 <div ng-dropdown-multiselect="" options="$ctrl.sponsored_ad_select" checkboxes="true" selected-model="$ctrl.multiselectModelLayoutIds " extra-settings="$ctrl.multiselectModelSettings"></div>
               </div>
             </div>
@@ -88,7 +86,7 @@
               </div>
             </div>
             <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
-              <input class="btn btn-primary modal_btn btn_size pull-left" value="Submit" id="submit" type="button" ng-disabled="sponsorAdsForm.website.$invalid" ng-click="$ctrl.submit()">
+              <input class="btn btn-primary modal_btn btn_size pull-left" value="Submit" id="submit" type="button" ng-disabled="sponsorAdsForm.website.$invalid || sponsorAdsForm.title.$invalid || sponsorAdsForm.name.$invalid" ng-click="$ctrl.submit()">
               <span ng-show="$ctrl.success_msg" style="color:green;">Added</span>
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub">
